--- a/package.json
+++ b/package.json
@@ -10,12 +10,27 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
     "@tsconfig/node16": "^1.0.2",
     "@types/cheerio": "^0.22.31",
+    "@types/jquery": "^3.5.14",
+    "babel-loader": "^8.2.3",
     "cheerio": "^1.0.0-rc.10",
     "chokidar": "^3.5.3",
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.7.0",
+    "mini-css-extract-plugin": "^2.6.0",
     "prettier": "^2.5.1",
+    "sass-loader": "^12.6.0",
     "ts-node": "^10.6.0",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-merge": "^5.8.0"
+  },
+  "dependencies": {
+    "jquery": "^3.6.0"
   }
 }
