--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,11 @@
 {
   "extends": "@tsconfig/node16",
   "compilerOptions": {
-    "baseUrl": "."
+    "baseUrl": ".",
+    "paths": {
+      "@src/*": ["src/*.ts"]
+    },
+    "noEmit": true,
+    "esModuleInterop": true
   }
 }
