--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev-run": "concurrently --kill-others \"ts-node commands/generate-pages.ts\" \"ts-node commands/generate-modules.ts\" \"sass -w src/sass/:dist/styles/\""
   },
   "keywords": [],
   "author": "",
@@ -20,6 +21,7 @@
     "cheerio": "^1.0.0-rc.10",
     "chokidar": "^3.5.3",
     "clean-webpack-plugin": "^4.0.0",
+    "concurrently": "^7.0.0",
     "css-loader": "^6.7.0",
     "mini-css-extract-plugin": "^2.6.0",
     "prettier": "^2.5.1",
